--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="tool-content">
                     <h3>Reciprocity Calculator</h3>
                     <p>Calculate adjusted exposure times to compensate for reciprocity failure in long exposures with film.</p>
-                    <a href="/reciprocity" class="btn">Use Tool</a>
+                    <a href="reciprocity.html" class="btn">Use Tool</a>
                 </div>
             </div>
             
@@ -138,7 +138,7 @@
                 <div class="tool-content">
                     <h3>Sunny 16 Calculator</h3>
                     <p>Determine proper exposure settings without a light meter using the classic Sunny 16 rule.</p>
-                    <a href="/sunny16" class="btn">Use Tool</a>
+                    <a href="sunny16.html" class="btn">Use Tool</a>
                 </div>
             </div>
             
@@ -148,7 +148,7 @@
                 <div class="tool-content">
                     <h3>Film Developer Timer</h3>
                     <p>Calculate development times with temperature compensation and get precise timers for your film processing.</p>
-                    <a href="/developer" class="btn">Use Tool</a>
+                    <a href="developer.html" class="btn">Use Tool</a>
                 </div>
             </div>
         </div>
