--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div class="tool-content">
                     <h3>Film Developer Timer</h3>
                     <p>Calculate development times with temperature compensation and get precise timers for your film processing.</p>
-                    <a href="developer.html" class="btn">Use Tool</a>
+                    <a href="developing.html" class="btn">Use Tool</a>
                 </div>
             </div>
         </div>
