--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             
             <!-- Film Developer Calculator/Timer -->
             <div class="tool-card">
-                <img src="https://images.unsplash.com/photo-1568513369-9a34d47a0520?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Film Development">
+                <img src="https://images.unsplash.com/photo-1646323354440-e2a01f7a3e94?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Film Development">
                 <div class="tool-content">
                     <h3>Film Developer Timer</h3>
                     <p>Calculate development times with temperature compensation and get precise timers for your film processing.</p>
