--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="tools-grid">
             <!-- Reciprocity Calculator -->
             <div class="tool-card">
-                <img src="https://images.unsplash.com/photo-1516035069371-29a1b244cc32?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Reciprocity Failure">
+                <img src="https://images.unsplash.com/photo-1701008634298-76183582958d?q=80&w=1173&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Reciprocity Failure">
                 <div class="tool-content">
                     <h3>Reciprocity Calculator</h3>
                     <p>Calculate adjusted exposure times to compensate for reciprocity failure in long exposures with film.</p>
