--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
                         <!-- Dilution Rate Calculator -->
             <div class="tool-card">
-                <img src="https://images.unsplash.com/photo-1646323354440-e2a01f7a3e94?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Film Development">
+                <img src="https://images.unsplash.com/photo-1709666414169-654f60926304?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3Dy1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Film Development">
                 <div class="tool-content">
                     <h3>Dilution Rate Calculator</h3>
                     <p>Calculate quantities of developing chemicals based on required ratios.</p>
