--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <header>
         <div class="container">
             <h1>Film Photography Tools</h1>
-            <p class="tagline">Essential calculators for analog photographers</p>
+            <p class="tagline">Essential calculators for analogue photographers</p>
         </div>
     </header>
     
@@ -167,7 +167,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2025 Film Photography Tools | Created for analog photographers</p>
+            <p>&copy; 2025 Film Photography Tools | Created for analogue photographers</p>
         </div>
     </footer>
 </body>
