Update index.html - adding new tiles

--- a/index.html
+++ b/index.html
@@ -163,6 +163,28 @@
                 </div>
             </div>
         </div>
+
+            <!-- Film Speed Converter -->
+            <div class="tool-card">
+                <img src="https://images.unsplash.com/photo-1646323354440-e2a01f7a3e94?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Film Development">
+                <div class="tool-content">
+                    <h3>Film Speed Converter</h3>
+                    <p>Calculate shutter speeds for push/pull adjustments based on initial speed values.</p>
+                    <a href="filmspeed.html" class="btn">Use Tool</a>
+                </div>
+            </div>
+        </div>
+
+            <!-- Filter Factor Calculator -->
+            <div class="tool-card">
+                <img src="https://images.unsplash.com/photo-1646323354440-e2a01f7a3e94?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Film Development">
+                <div class="tool-content">
+                    <h3>Filter Factor Calculator</h3>
+                    <p>Calculate adjusted shutter speed values for use with coloured filters.</p>
+                    <a href="filterfactor.html" class="btn">Use Tool</a>
+                </div>
+            </div>
+        </div>
     </main>
     
     <footer>
