--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
             <!-- Film Speed Converter -->
             <div class="tool-card">
-                <img src="https://unsplash.com/photos/a-blurry-photo-of-a-street-light-at-night-gPWTueF7LW0" alt="Film Development">
+                <img src="https://images.unsplash.com/photo-1692126275559-663e5d747ba7?q=80&w=1159&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Film Development">
                 <div class="tool-content">
                     <h3>Film Speed Converter</h3>
                     <p>Calculate shutter speeds for push/pull adjustments based on initial speed values.</p>
