--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <img src="https://images.unsplash.com/photo-1692126275559-663e5d747ba7?q=80&w=1159&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Film Development">
                 <div class="tool-content">
                     <h3>Film Speed Converter</h3>
-                    <p>Calculate shutter speeds for push/pull adjustments based on initial speed values.</p>
+                    <p>Convert between box ISO and shooting ISO; see push/pull stops and adjusted shutter speed.</p>
                     <a href="filmspeed.html" class="btn">Use Tool</a>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                 <img src="https://images.unsplash.com/photo-1545424273-4dd93a233016?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Film Development">
                 <div class="tool-content">
                     <h3>Filter Factor Calculator</h3>
-                    <p>Calculate adjusted shutter speed values for use with coloured filters.</p>
+                    <p>Work out exposure compensation for ND or coloured filters; get corrected shutter speeds.</p>
                     <a href="filterfactor.html" class="btn">Use Tool</a>
                 </div>
             </div>
