--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="tool-content">
                     <h2>Film Developer Timer</h2>
                     <p>Calculate development times with temperature compensation and get precise timers for your film processing.</p>
-                    <a href="DevelopingNew.html" class="btn">Use Tool</a>
+                    <a href="DevelopingV3.html" class="btn">Use Tool</a>
                 </div>
             </div>
 
