Update developingV3.html - my preferred pre-sets added

--- a/developingV3.html
+++ b/developingV3.html
@@ -1438,6 +1438,56 @@
       getQuickStartTemplates() {
         return [
           {
+            name: "HP5+ @ 400 - ID-11",
+            filmName: "Ilford HP5+",
+            developerName: "Ilford ID-11",
+            dilutionRatio: "Stock",
+            baseTemperature: 20,
+            baseTime: 7.5,
+            agitationPattern: "standard-8-4",
+            agitationInstructions: "8 inversions initially, then 4 every minute"
+          },
+          {
+            name: "FP4+ @ 200 - ID-11",
+            filmName: "Ilford FP4+",
+            developerName: "Ilford ID-11",
+            dilutionRatio: "Stock",
+            baseTemperature: 20,
+            baseTime: 10,
+            agitationPattern: "standard-8-4",
+            agitationInstructions: "8 inversions initially, then 4 every minute"
+          }, 
+          {
+            name: "FP4+ @ 125 - ID-11",
+            filmName: "Ilford FP4+",
+            developerName: "ID-11",
+            dilutionRatio: "Stock",
+            baseTemperature: 20,
+            baseTime: 8.5,
+            agitationPattern: "standard-8-4",
+            agitationInstructions: "8 inversions initially, then 4 every minute"
+          },
+          {
+            name: "FP4+ @ 125 - Ilfosol 3",
+            filmName: "Ilford FP4+",
+            developerName: "Ilford Ilfosol 3",
+            dilutionRatio: "1+9",
+            baseTemperature: 20,
+            baseTime: 4.25,
+            agitationPattern: "standard-8-4",
+            agitationInstructions: "8 inversions initially, then 4 every minute"
+          },
+          {
+            name: "FP4+ @ 200 - Ilfosol 3",
+            filmName: "Ilford FP4+",
+            developerName: "Ilford Ilfosol 3",
+            dilutionRatio: "1+9",
+            baseTemperature: 20,
+            baseTime: 7.5,
+            agitationPattern: "standard-8-4",
+            agitationInstructions: "8 inversions initially, then 4 every minute"
+          },
+         {
             name: "HP5+ @ 400 - HC-110 (B)",
             filmName: "Ilford HP5+",
             developerName: "HC-110",
@@ -1454,16 +1504,6 @@
             dilutionRatio: "1+1",
             baseTemperature: 20,
             baseTime: 8.5,
-            agitationPattern: "standard-8-4",
-            agitationInstructions: "8 inversions initially, then 4 every minute"
-          },
-          {
-            name: "FP4+ @ 125 - ID-11",
-            filmName: "Ilford FP4+",
-            developerName: "ID-11",
-            dilutionRatio: "1+1",
-            baseTemperature: 20,
-            baseTime: 6.5,
             agitationPattern: "standard-8-4",
             agitationInstructions: "8 inversions initially, then 4 every minute"
           },
